[package]
name = "arc-fuse"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2.51"
fuse = { git = "https://github.com/jam1garner/fuse-rs", branch = "log_bump" }
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = ["libzstd"] }

[features]
print = []
